# gym_suscription_churn_prediction

./: Dockerfile  docker-compose.yml  odoo.conf  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
addons/gym_backoffice/: __manifest__.py
addons/gym_backoffice/controllers/: portal.py
addons/gym_backoffice/data/: customer_segments.xml  gym_churn_cron.xml  gym_demo_data.xml
addons/gym_backoffice/demo/: demo_access_logs.xml  demo_classes.xml  demo_health_scores.xml  demo_partners.xml  demo_portal_users.xml  demo_promotions.xml
addons/gym_backoffice/engine/: churn_model.py  churn_probability_model.py  churn_survival_model.py  feature_engineering.py  odoo_features.py
addons/gym_backoffice/models/: __init__.py  gym_access.py  gym_center.py  gym_churn_feature_importance.py  gym_churn_model.py  gym_churn_probability_model.py  (+9 more)
data/: contactos.csv  crm_leads.csv  customer_health.csv  empleados_entrenadores.csv  engagement.csv  eventos_participacion.csv  facturacion.csv  helpdesk_tickets.csv  inventario.csv  mantenimiento.csv  registro_accesos.csv  scoring_churn.csv  suscripciones.csv
experiments/: churn_prediction.ipynb  churn_probability_prediction.ipynb  churn_survival_prediction.ipynb  customer_segmentation.ipynb  exploratory_analysis.ipynb
scripts/: generar_datos_churn_gym.py  populate_odoo.py
scripts/odoo_synthetic_data/: actividad_deportiva.csv  centros_deportivos.csv  contactos.csv  empleados_entrenadores.csv  encuestas_satisfaccion.csv  helpdesk_tickets.csv  marketing_automation.csv  registro_accesos.csv  ventas_servicios.csv
(+19 files in other folders)
